# uipathlib

./: Cargo.toml  DEV.md  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
old_python_version/: __main__.py  names.txt
src/: lib.rs  models.rs  python_bindings.rs
tests/: test_live_uipath.py  test_smoke.py
uipathlib/: __init__.py  __main__.py  models.py  uipath.py
wheelhouse-test/: uipathlib-0.0.12-cp310-abi3-win_amd64.whl
