[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "uipathlib"
dynamic = ["version"]
requires-python = ">=3.10"
description = "UiPath Cloud client package powered by Rust and PyO3."
readme = "README.md"
authors = [{ name = "Paulo Portela", email = "portela.paulo@gmail.com" }]
maintainers = [{ name = "Paulo Portela", email = "portela.paulo@gmail.com" }]
license = "BSD-3-Clause"
keywords = ["UiPath", "Orchestrator", "RPA", "Python", "API"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = []

[project.optional-dependencies]
dev = ["twine", "build", "pytest"]

[tool.maturin]
features = ["python"]

[project.urls]
Homepage = "https://github.com/aghuttun/uipathlib"
Documentation = "https://github.com/aghuttun/uipathlib/blob/main/README.md"
